2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.xattr.cs:
	  Corrected typo.

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.xattr.cs:
	  Added overlaying system calls.

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.stat.cs:
	* Interop/Linux/Interop.Linux.uname.cs:
	* Interop/Apple/Interop.Apple.uname.cs:
	* Interop/Apple/Interop.Apple.getattrlist.cs:
	  Added return values to documentation.

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Apple/Interop.Apple.xattr.cs:
	  Implemented Mac OS X getxattr(2), setxattr(2),
	  removexattr(2) and listxattr(2).

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.getattrlist.cs:
	  Implemented Mac OS X setattrlist(2).

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.getattrlist.cs:
	  Documents which platform function are we calling.

	* Interop/Apple/Interop.Apple.stat.cs:
	  Documented stat and stat64

	* Interop/Apple/Interop.Apple.uname.cs:
	* Interop/Linux/Interop.Linux.uname.cs:
	  Documented uname

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Apple/Interop.Apple.types.cs:
	* Interop/Apple/Interop.Apple.getattrlist.cs:
	  Defined Mac OS X's getattrlist(2).

2015-02-12  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Tests/Interop.Linux.cs:
	* Interop/Linux/Interop.Linux.uname.cs:
	* Interop/Linux/Interop.Linux.Errors.cs:
	* Interop/Linux/Interop.Linux.Libraries.cs:
	  Added Linux libc, errno and uname.

2015-02-12  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Tests/Interop.Apple.cs:
	* Interop/Apple/Interop.Apple.uname.cs:
	  Added code for uname() in OS X

	* Tests/Interop.DetectOS.cs:
	  Only compile tests in DEBUG

2015-02-12  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Tests/Interop.Apple.cs: